--- a/vagrant/catalog/templates/delete.html
+++ b/vagrant/catalog/templates/delete.html
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <form action="{{url_for('delete',item_name={{item.name}})}}" method = 'POST'>
+      <form action="{{url_for('delete',item_name=item.name)}}" method = 'POST'>
 
       <h3>Delete Item</h3>
 
