--- a/vagrant/catalog/templates/edit.html
+++ b/vagrant/catalog/templates/edit.html
@@ -5,26 +5,27 @@
     <div class="col-md-12">
       <form action="{{ url_for('edit',item_name=item.name)}}" method = 'POST'>
 
-      <h3>Edit Item</h3>
+        <h3>Edit Item</h3>
 
-      <div>Title</div>
-      <div>
-        <input type="text" name="name" placeholder="{{item.name}}">
-      </div>
+        <div>Title</div>
+        <div>
+          <input type="text" name="name" placeholder="{{item.name}}">
+        </div>
 
-      <div>Description</div>
-      <div>
-        <input type="text" name="description" placeholder="{{item.description}}">
-      </div>
+        <div>Description</div>
+        <div>
+          <input type="text" name="description" placeholder="{{item.description}}">
+        </div>
 
-      <div>Category</div>
-      <select name="category">
-        {% for category in categories %}
-          <option value="{{category.name}}">{{category.name}}</option>
-        {% endfor %}
-      </select>
+        <div>Category</div>
+        <select name="category">
+          {% for category in categories %}
+            <option value="{{category.name}}">{{category.name}}</option>
+          {% endfor %}
+        </select>
 
-      <input type="submit" value="Submit">
+        <input type="submit" value="Submit">
+      </form>
     </div>
   </div>
 
