--- a/vagrant/catalog/templates/itemLogIn.html
+++ b/vagrant/catalog/templates/itemLogIn.html
@@ -17,11 +17,11 @@
     <div>{{item.description}}</div>
 
     <div>
-      <a href='{{url_for('edit', item_name={{item.name}})}}' class="link">
+      <a href='{{url_for('edit', item_name=item.name)}}' class="link">
         Edit
       </a>
       |
-      <a href='{{url_for('delete',item_name={{item.name}})}}' class="link">
+      <a href='{{url_for('delete',item_name=item.name)}}' class="link">
         Delete
       </a>
     </div>
