--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -41,7 +41,7 @@
             success: function(result) {
               // Handle or verify the server response if necessary.
               if (result) {
-                $('#result').html('Login Successful!</br>'+ result + \
+                $('#result').html('Login Successful!</br>'+ result +
                   '</br>Redirecting...')
                 setTimeout(function() {
                   window.location.href = "/catalog";
