--- a/vagrant/catalog/templates/main.html
+++ b/vagrant/catalog/templates/main.html
@@ -19,7 +19,11 @@
       	</div>
 
       	<div class="col-md-6 text-right">
-      					<a href="{{url_for('showLogin')}}">Login</a>
+          {% if not session.logged_in %}
+      			<a href="{{url_for('showLogin')}}">Login</a>
+          {% else %}
+            <a href="{{url_for('gdisconnect')}}">Logout</a>
+          {% endif %}
       	</div>
       </div>
 
