--- a/vagrant/catalog/templates/delete.html
+++ b/vagrant/catalog/templates/delete.html
@@ -1,18 +1,26 @@
 {% extends "main.html" %}
   {% block content %}
 
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row body">
+    <div class="col-md-2"></div>
+
+    <div class="col-md-8 bodyContent">
       <form action="{{url_for('delete',item_name=item.name)}}" method = 'POST'>
 
-      <h3>Delete Item</h3>
+      <h3 class="header">Delete Item</h3>
+
+      <br>
 
       <div>Are you sure you want to delete?</div>
 
-      <div>
+      <br>
+
+      <div class="click">
         <input type="submit" value="Submit">
       </div>
     </div>
+
+    <div class="col-md-2"></div>
   </div>
 
   {% endblock %}
