--- a/vagrant/catalog/templates/item.html
+++ b/vagrant/catalog/templates/item.html
@@ -1,10 +1,18 @@
 {% extends "main.html" %}
   {% block content %}
 
-  <div class="col-md-12">
-    <h3 class="header">{{item.name}}</h3>
+  <div class="row body">
+    <div class="col-md-2"></div>
 
-    <div>{{item.description}}</div>
+    <div class="col-md-8 bodyContent">
+      <h3 class="header">{{item.name}}</h3>
+
+      <br>
+
+      <div>Description: {{item.description}}</div>
+    </div>
+
+    <div class="col-md-2"></div>
   </div>
 
   {% endblock %}
