--- a/vagrant/catalog/templates/itemLogIn.html
+++ b/vagrant/catalog/templates/itemLogIn.html
@@ -1,30 +1,40 @@
 {% extends "main.html" %}
   {% block content %}
 
-  <div class="col-md-12">
-    <h3 class="header">{{item.name}}</h3>
+  <div class="row body">
+    <div class="col-md-2"></div>
 
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <ul>
-          {% for message in messages %}
-            <li><strong>{{message}}</strong></li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-    {% endwith %}
+    <div class="col-md-8 bodyContent">
+      <h3 class="header">{{item.name}}</h3>
 
-    <div>{{item.description}}</div>
+      <br>
 
-    <div>
-      <a href='{{url_for('edit', item_name=item.name)}}' class="link">
-        Edit
-      </a>
-      |
-      <a href='{{url_for('delete',item_name=item.name)}}' class="link">
-        Delete
-      </a>
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <ul>
+            {% for message in messages %}
+              <li><strong>{{message}}</strong></li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+
+      <div> Description: {{item.description}}</div>
+
+      <br>
+
+      <div class="click">
+        <a href='{{url_for('edit', item_name=item.name)}}' class="link">
+          Edit
+        </a>
+        |
+        <a href='{{url_for('delete',item_name=item.name)}}' class="link">
+          Delete
+        </a>
+      </div>
     </div>
+
+    <div class="col-md-2"></div>
   </div>
 
   {% endblock %}
