--- a/vagrant/catalog/templates/items.html
+++ b/vagrant/catalog/templates/items.html
@@ -1,32 +1,38 @@
 {% extends "main.html" %}
   {% block content %}
 
-  <div class="row">
-    <div class="col-md-3 text-left">
-      <h3 class="header">Categories</h3>
+  <div class="row body">
+    <div class="col-md-2"></div>
 
-      {% for category in categories %}
-        <div>
-          <a href='{{url_for('items',
-                    category_name=category.name)}}'
-                    class="link">{{category.name}}
-          </a>
-        </div>
-      {% endfor %}
+    <div class="col-md-8 bodyContent">
+      <div class="col-md-3 text-left">
+        <h3 class="header">Categories</h3>
+
+        {% for category in categories %}
+          <div>
+            <a href='{{url_for('items',
+                      category_name=category.name)}}'
+                      class="link">{{category.name}}
+            </a>
+          </div>
+        {% endfor %}
+      </div>
+
+      <div class="col-md-9 text-left">
+        <h3 class="header">{{category_name}} Items ({{count}} items)</h3>
+
+        {% for item in items %}
+          <div>
+            <a href='{{url_for('item',
+                      category_name=item.category_name,
+                      item_name=item.name)}}' class="link">{{item.name}}
+            </a>
+          </div>
+        {% endfor %}
+      </div>
     </div>
 
-    <div class="col-md-9 text-left">
-      <h3 class="header">{{category_name}} Items ({{count}} items)</h3>
-
-      {% for item in items %}
-        <div>
-          <a href='{{url_for('item',
-                    category_name=item.category_name,
-                    item_name=item.name)}}' class="link">{{item.name}}
-          </a>
-        </div>
-      {% endfor %}
-    </div>
+    <div class="col-md-2"></div>
   </div>
 
   {% endblock %}
